--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,8 +13,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: ls
-      run: ls
+    - name: cd
+      run: cd AiFinal/AiFinal/
     - name: make
       run: make
     - name: make check
