--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: cd
       run: cd AiFinal/AiFinal/
+    - name: ls
+      run: ls
     - name: make
       run: make
     - name: make check
