--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: cd
-      run: cd AiFinal/AiFinal/AiFinal/
+      run: cd AiFinal/AiFinal/ && ls
     - name: ls
       run: ls
     - name: make
