--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -14,12 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: cd
-      run: cd AiFinal/AiFinal/ && ls
-    - name: ls
-      run: ls
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+      run: cd AiFinal/AiFinal/ && make
+
